[gd_scene load_steps=7 format=3 uid="uid://b767nngyo8vpv"]

[ext_resource type="Script" path="res://Scripts/CardBase.gd" id="1_2evum"]
[ext_resource type="Texture2D" uid="uid://ddjuhvercy11j" path="res://Art/Cards/Weapon/White1.png" id="2_j65cw"]
[ext_resource type="Texture2D" uid="uid://dfrs1730l2g4n" path="res://Art/Cards/backgrounds/border_hover.png" id="3_1vy8n"]
[ext_resource type="Texture2D" uid="uid://b2ct3hpmpd3lm" path="res://Art/UI/power_lightning.png" id="3_ojnlo"]
[ext_resource type="LabelSettings" uid="uid://ytm6hfuwir76" path="res://Fonts/CardEnergyStyle.tres" id="4_phj3m"]
[ext_resource type="LabelSettings" uid="uid://ct8kk8m7ibbt7" path="res://Fonts/CardPowerStyle.tres" id="4_q0tm0"]

[node name="CardBase" type="MarginContainer"]
offset_right = 251.0
offset_bottom = 351.0
pivot_offset = Vector2(125, 175)
theme_override_constants/margin_left = 0
theme_override_constants/margin_top = 0
script = ExtResource("1_2evum")

[node name="CardImg" type="Sprite2D" parent="."]
scale = Vector2(0.25, 0.25)
texture = ExtResource("2_j65cw")
centered = false

[node name="Border" type="Sprite2D" parent="."]
visible = false

[node name="Bars" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="TopGap" type="MarginContainer" parent="Bars"]
visible = false
custom_minimum_size = Vector2(0, 25)
layout_mode = 2

[node name="TopBar" type="HBoxContainer" parent="Bars"]
layout_mode = 2

[node name="LeftGap" type="MarginContainer" parent="Bars/TopBar"]
custom_minimum_size = Vector2(15, 0)
layout_mode = 2

[node name="LightningContainer" type="MarginContainer" parent="Bars/TopBar"]
layout_mode = 2
theme_override_constants/margin_left = 0
theme_override_constants/margin_top = 25
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 15

[node name="Lightning" type="TextureRect" parent="Bars/TopBar/LightningContainer"]
layout_mode = 2
texture = ExtResource("3_ojnlo")
expand_mode = 3

[node name="Energy" type="MarginContainer" parent="Bars/TopBar"]
layout_mode = 2
theme_override_constants/margin_top = 15

[node name="CenterContainer" type="CenterContainer" parent="Bars/TopBar/Energy"]
layout_mode = 2

[node name="EnergyText" type="Label" parent="Bars/TopBar/Energy/CenterContainer"]
layout_mode = 2
text = "1"
label_settings = ExtResource("4_phj3m")

[node name="MarginContainer" type="MarginContainer" parent="Bars/TopBar/Energy"]
layout_mode = 2

[node name="MidGap" type="MarginContainer" parent="Bars/TopBar"]
layout_mode = 2
size_flags_horizontal = 3

[node name="RightGap" type="MarginContainer" parent="Bars/TopBar"]
custom_minimum_size = Vector2(25, 0)
layout_mode = 2

[node name="MidGap" type="MarginContainer" parent="Bars"]
layout_mode = 2
size_flags_vertical = 3

[node name="Power" type="MarginContainer" parent="Bars"]
layout_mode = 2
theme_override_constants/margin_top = -10
theme_override_constants/margin_bottom = -15

[node name="CenterContainer" type="CenterContainer" parent="Bars/Power"]
layout_mode = 2

[node name="Power" type="Label" parent="Bars/Power/CenterContainer"]
layout_mode = 2
text = "4"
label_settings = ExtResource("4_q0tm0")
horizontal_alignment = 1
vertical_alignment = 1

[node name="BottomBar" type="HBoxContainer" parent="Bars"]
layout_mode = 2

[node name="LeftGap" type="MarginContainer" parent="Bars/BottomBar"]
custom_minimum_size = Vector2(25, 0)
layout_mode = 2

[node name="SpecialText" type="MarginContainer" parent="Bars/BottomBar"]
layout_mode = 2
size_flags_horizontal = 3

[node name="CenterContainer" type="CenterContainer" parent="Bars/BottomBar/SpecialText"]
layout_mode = 2
size_flags_horizontal = 4

[node name="SpecialText" type="Label" parent="Bars/BottomBar/SpecialText/CenterContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
text = "Does 2 damage"

[node name="MidGap" type="MarginContainer" parent="Bars/BottomBar"]
visible = false
layout_mode = 2
size_flags_horizontal = 3

[node name="Color" type="MarginContainer" parent="Bars/BottomBar"]
visible = false
layout_mode = 2

[node name="CenterContainer" type="CenterContainer" parent="Bars/BottomBar/Color"]
layout_mode = 2

[node name="Color" type="Label" parent="Bars/BottomBar/Color/CenterContainer"]
layout_mode = 2
text = "White
"

[node name="RightGap" type="MarginContainer" parent="Bars/BottomBar"]
custom_minimum_size = Vector2(25, 0)
layout_mode = 2

[node name="BottomGap" type="MarginContainer" parent="Bars"]
custom_minimum_size = Vector2(0, 15)
layout_mode = 2

[node name="HoverFocus" type="TextureButton" parent="."]
layout_mode = 2
texture_hover = ExtResource("3_1vy8n")
stretch_mode = 0

[connection signal="mouse_entered" from="HoverFocus" to="." method="_on_hover_focus_mouse_entered"]
[connection signal="mouse_exited" from="HoverFocus" to="." method="_on_hover_focus_mouse_exited"]
